K8s/deploy-concert.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deploy-concert
spec:
  selector:  
    matchLabels:
      app: concertapp
  replicas: 2
  template:  
    metadata:
      labels:
        app: concertapp
    spec:
      containers:
      - name: concertapp
        image: dnazarenocr.azurecr.io/concert-app:1.0
        # resources:
        #   limits:
        #       memory: "200Mi"
        #       cpu: "1"
        #   requests:
        #       memory: "100Mi" 
        #       cpu: "0.5"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
