K8s/deploy-mariadb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: concert
spec:
  containers:
    - name: concertapp
      image: crdnazareno.azurecr.io/concert-app
  imagePullSecrets:
    - name: regcred
