K8s/deploy-phpmyadmin.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deploy-phpmyadmin
  namespace: ns-dnazareno
spec:
  selector:  
    matchLabels:
      app: phpmyadmin
  replicas: 2
  template:  
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2.1
        resources:
          limits:
              memory: "300Mi"
              cpu: "300m"
          requests:
              memory: "200Mi" 
              cpu: "200m"
        livenessProbe:
          exec:
            command:
            - ls
            - /tmp/
          initialDelaySeconds: 2
          periodSeconds: 2
        ports:
        - containerPort: 80
