K8s/service-concert.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-concert
  labels:
     app: concertapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
     app: concertapp
