K8s/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-phpmyadmin
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
     app: phpmyadmin
