K8s/ingress-weekly.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-weekly
   annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
       - path: /dnazareno/test1(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: service-phpmyadmin
             port:
               number: 80
       - path: /dnazareno/test2(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: service-concert
             port:
               number: 80
